--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "uuid": "^8.3.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
