chore: initial app contents

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # The main GraphQL endpoint URL to fetch data from
-CMS_GRAPHQL_API_URL="https://cms.com/api/v1/graphql"
+NEXT_PUBLIC_CMS_GRAPHQL_API_URL="https://cms.com/api/v1/graphql"
 
 # Generate a local build id namespace via https://www.uuidgenerator.net/
 BUILD_ID_NAMESPACE="388f729a-0eb7-4477-b054-9488bd2d8c4b"
