--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "graphql-request": "^4.0.0",
+    "localforage": "^1.10.0",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
@@ -19,11 +22,15 @@
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
     "@types/uuid": "^8.3.4",
+    "autoprefixer": "^10.4.2",
+    "cssnano": "^5.0.17",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
+    "postcss": "^8.4.6",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.5.5",
     "uuid": "^8.3.2"
   },
