--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,6 +34,11 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          NEXT_PUBLIC_CMS_GRAPHQL_API_URL: ${{ secrets.CMS_GRAPHQL_API_URL }}
+          NEXT_PUBLIC_CMS_REST_API_URL: ${{ secrets.CMS_REST_API_URL }}
+          BUILD_ID_NAMESPACE: ${{ secrets.BUILD_ID_NAMESPACE }}
+          NODE_ENV: ${{ secrets.NODE_ENV }}
 
       - name: Deploy
         run: echo deploy-this-now
