--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     name: Node ${{ matrix.node }}
 
+    concurrency:
+      group: ${{ github.ref }}
+      cancel-in-progress: true
+
     strategy:
       matrix:
         node: ["16"]
