--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
 # The main GraphQL endpoint URL to fetch data from
 NEXT_PUBLIC_CMS_GRAPHQL_API_URL="https://cms.com/api/v1/graphql"
 
+# The main REST endpoint URL to fetch data from
+NEXT_PUBLIC_CMS_REST_API_URL="https://cms.com/api/v1/rest"
+
+# Access token to interact with the CMS
+NEXT_PUBLIC_CMS_ACCESS_TOKEN="<access-token>"
+
 # Generate a local build id namespace via https://www.uuidgenerator.net/
 BUILD_ID_NAMESPACE="388f729a-0eb7-4477-b054-9488bd2d8c4b"
+
+# Use "development" as the default environment
+NODE_ENV="development"
