feat: add matomo integration

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ NEXT_PUBLIC_CMS_REST_API_URL="https://cms.com/api/v1/rest"
 # Access token to interact with the CMS
 NEXT_PUBLIC_CMS_ACCESS_TOKEN="<access-token>"
 
+# URL to the Matomo host for analytics data
+NEXT_PUBLIC_MATOMO_URL="https://matomo.com"
+
+# Matomo Tag Manager container ID for the website
+NEXT_PUBLIC_MATOMO_CONTAINER_ID="12345678"
+
 # Generate a local build id namespace via https://www.uuidgenerator.net/
 BUILD_ID_NAMESPACE="388f729a-0eb7-4477-b054-9488bd2d8c4b"
 
