fix: integrate all secrets

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ NEXT_PUBLIC_CMS_GRAPHQL_API_URL="https://cms.com/api/v1/graphql"
 NEXT_PUBLIC_CMS_REST_API_URL="https://cms.com/api/v1/rest"
 
 # Access token to interact with the CMS
-NEXT_PUBLIC_CMS_ACCESS_TOKEN="<access-token>"
+NEXT_PUBLIC_CMS_API_TOKEN="<api-token>"
 
 # URL to the Matomo host for analytics data
 NEXT_PUBLIC_MATOMO_URL="https://matomo.com"
