--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
+    "classnames": "^2.3.1",
     "graphql-request": "^4.0.0",
     "localforage": "^1.10.0",
     "next": "12.0.10",
