--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "lint": "next lint",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "tailwind:config-viewer": "npx tailwind-config-viewer -y",
+    "graphql:watch": "graphql-codegen --watch",
+    "graphql:generate": "graphql-codegen",
+    "graphql:introspect": "node ./bin/introspect-graphql-schema.js"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.9",
     "@heroicons/react": "^1.0.5",
     "classnames": "^2.3.1",
+    "graphql": "^15.8.0",
     "graphql-request": "^4.0.0",
     "localforage": "^1.10.0",
     "next": "12.0.10",
@@ -21,11 +27,21 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "@graphql-codegen/add": "^3.1.1",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/introspection": "^2.1.1",
+    "@graphql-codegen/schema-ast": "^2.4.1",
+    "@graphql-codegen/typescript": "^2.4.5",
+    "@graphql-codegen/typescript-operations": "^2.3.2",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.8",
+    "@types/graphql": "^14.5.0",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
     "@types/uuid": "^8.3.4",
+    "apollo-codegen": "^0.20.2",
     "autoprefixer": "^10.4.2",
     "cssnano": "^5.0.17",
+    "dotenv": "^16.0.0",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "husky": "^7.0.4",
