--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.27.1",
     "swr": "^1.2.1"
   },
   "devDependencies": {
