--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,6 +36,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Generate GraphQL hooks
+        run: npm run graphql:generate
+
       - name: Build
         run: npm run build
         env:
