--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "@apollo/client": "^3.5.9",
     "@heroicons/react": "^1.0.5",
     "classnames": "^2.3.1",
+    "deepmerge": "^4.2.2",
+    "focus-trap": "^6.7.3",
     "graphql": "^15.8.0",
     "graphql-request": "^4.0.0",
+    "js-cookie": "^3.0.1",
     "localforage": "^1.10.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-focus-trap": "^2.7.1",
     "react-hook-form": "^7.27.1",
+    "react-transition-group": "^4.4.2",
     "swr": "^1.2.1"
   },
   "devDependencies": {
@@ -35,9 +40,12 @@
     "@graphql-codegen/typescript": "^2.4.5",
     "@graphql-codegen/typescript-operations": "^2.3.2",
     "@graphql-codegen/typescript-react-apollo": "^3.2.8",
+    "@tailwindcss/forms": "^0.4.0",
     "@types/graphql": "^14.5.0",
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
+    "@types/react-transition-group": "^4.4.4",
     "@types/uuid": "^8.3.4",
     "apollo-codegen": "^0.20.2",
     "autoprefixer": "^10.4.2",
