--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@graphql-codegen/typescript": "^2.4.5",
     "@graphql-codegen/typescript-operations": "^2.3.2",
     "@graphql-codegen/typescript-react-apollo": "^3.2.8",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "@types/graphql": "^14.5.0",
     "@types/js-cookie": "^3.0.1",
