--- a/package.json
+++ b/package.json
@@ -16,20 +16,15 @@
     "@apollo/client": "^3.5.9",
     "@heroicons/react": "^1.0.5",
     "classnames": "^2.3.1",
-    "deepmerge": "^4.2.2",
     "focus-trap": "^6.7.3",
     "graphql": "^15.8.0",
-    "graphql-request": "^4.0.0",
     "js-cookie": "^3.0.1",
-    "localforage": "^1.10.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-focus-trap": "^2.7.1",
     "react-hook-form": "^7.27.1",
     "react-transition-group": "^4.4.2",
-    "stacktrace-js": "^2.0.2",
-    "swr": "^1.2.1"
+    "stacktrace-js": "^2.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
@@ -43,7 +38,6 @@
     "@graphql-codegen/typescript-react-apollo": "^3.2.8",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
-    "@types/graphql": "^14.5.0",
     "@types/js-cookie": "^3.0.1",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
