--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "focus-trap": "6.7.3",
     "graphql": "15.8.0",
     "js-cookie": "3.0.1",
+    "@headlessui/react": "^1.5.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
