chore(server): fix csp rules for styles and scripts

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -23,7 +23,7 @@ RewriteRule ^(.*)/$ /$1 [L,R]
 	Header set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
 
 	# we always allow our own domains as well as twitch for iframes
-	Header set Content-Security-Policy "default-src 'self' rheinklang.events *.rheinklang-festival.ch *.staging.rheinklang-festival.ch *.rheinklang.events; style-src 'unsafe-inline'; frame-src player.twitch.tv; script-src facebook.net *.facebook.net; img-src dummyimage.com; img-src data:"
+	Header set Content-Security-Policy "default-src 'self' rheinklang.events *.rheinklang-festival.ch *.staging.rheinklang-festival.ch *.rheinklang.events; style-src-elem 'self'; style-src 'unsafe-inline'; frame-src player.twitch.tv; script-src facebook.net *.facebook.net; img-src dummyimage.com; img-src 'self' data:; script-src 'self' analytics.rheinklang-festival.ch facebook.net *.facebook.net"
 
 	# disable all client-side features as long as we don't use it
 	Header set Feature-Policy: "none"
