feat: add basic slack hooks and fix translation ssr issue

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ NEXT_PUBLIC_MATOMO_URL="https://matomo.com"
 # Matomo Tag Manager container ID for the website
 NEXT_PUBLIC_MATOMO_CONTAINER_ID="12345678"
 
+# Slack Webhook URL for direct reporting
+NEXT_PUBLIC_SLACK_REPORTING_WEBHOOK_URL=""
+
+# Slack Webhook URL for contact submissions
+NEXT_PUBLIC_SLACK_CONTACT_WEBHOOK_URL=""
+
 # Generate a local build id namespace via https://www.uuidgenerator.net/
 BUILD_ID_NAMESPACE="388f729a-0eb7-4477-b054-9488bd2d8c4b"
 
