--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   },
   "dependencies": {
     "@apollo/client": "3.5.10",
+    "@headlessui/react": "1.5.0",
     "@heroicons/react": "1.0.6",
+    "@slack/webhook": "^6.1.0",
     "classnames": "2.3.1",
     "focus-trap": "6.7.3",
     "graphql": "16.3.0",
     "js-cookie": "3.0.1",
-    "@headlessui/react": "1.5.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
