--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "focus-trap": "6.7.3",
     "graphql": "16.3.0",
     "js-cookie": "3.0.1",
+    "lazysizes": "^5.3.2",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
