fix: seo with i18n values now supported

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ BUILD_ID_NAMESPACE="388f729a-0eb7-4477-b054-9488bd2d8c4b"
 
 # Use "development" as the default environment
 NODE_ENV="development"
+
+# Can be useful to debug GraphQL queries
+DEBUG_GRAPHQL_CLIENT=false
