--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build && next export",
     "start": "next start",
     "prepare": "husky install",
-    "tailwind:config-viewer": "npx tailwind-config-viewer -y",
+    "tailwind:config-viewer": "npx -y tailwind-config-viewer",
+    "tailwind:export": "npx -y tailwind-config-viewer export ./styleguide",
     "graphql:watch": "graphql-codegen --watch",
     "graphql:generate": "graphql-codegen",
     "graphql:introspect": "node ./bin/introspect-graphql-schema.js"
