--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,6 +77,9 @@ jobs:
             **/.git*/**
             **/.github/**
 
+      - name: Generate Styleguide
+        run: npm run tailwind:export
+
       - name: Deploy Styleguide
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
