--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "next dev",
     "lint": "next lint",
+    "prebuild": "npm run build:service-worker",
     "build": "next build && next export",
+    "build:service-worker": "rollup -c rollup.config.js",
     "start": "next start",
     "prepare": "husky install",
     "tailwind:config-viewer": "npx -y tailwind-config-viewer",
@@ -45,6 +47,10 @@
     "@graphql-codegen/typescript": "2.4.8",
     "@graphql-codegen/typescript-operations": "2.3.5",
     "@graphql-codegen/typescript-react-apollo": "3.2.11",
+    "@rollup/plugin-commonjs": "^21.1.0",
+    "@rollup/plugin-node-resolve": "^13.2.1",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@tailwindcss/aspect-ratio": "0.4.0",
     "@tailwindcss/forms": "0.5.0",
     "@tailwindcss/typography": "0.5.2",
@@ -55,6 +61,8 @@
     "@types/react": "17.0.44",
     "@types/react-transition-group": "4.4.4",
     "@types/uuid": "8.3.4",
+    "@types/workbox-cacheable-response": "^4.3.1",
+    "@types/workbox-expiration": "^4.3.1",
     "apollo-codegen": "0.20.2",
     "autoprefixer": "10.4.4",
     "cssnano": "5.1.7",
@@ -65,9 +73,16 @@
     "lint-staged": "12.3.8",
     "postcss": "8.4.12",
     "prettier": "2.6.2",
+    "rollup": "^2.70.2",
+    "rollup-plugin-copy": "^3.4.0",
     "tailwindcss": "3.0.24",
     "typescript": "4.6.3",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "workbox-cacheable-response": "^6.5.3",
+    "workbox-expiration": "^6.5.3",
+    "workbox-precaching": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
