--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "scripts": {
     "dev": "next dev",
     "lint": "next lint",
-    "prebuild": "npm run build:service-worker",
-    "build": "next build && next export",
+    "build": "run-s build:*",
     "build:service-worker": "rollup -c rollup.config.js",
+    "build:pages": "next build",
+    "build:sitemap": "next-sitemap",
+    "build:export": "next export",
     "start": "next start",
     "prepare": "husky install",
     "tailwind:config-viewer": "npx -y tailwind-config-viewer",
@@ -71,6 +73,8 @@
     "eslint-config-next": "12.1.5",
     "husky": "7.0.4",
     "lint-staged": "12.4.0",
+    "npm-run-all": "4.1.5",
+    "next-sitemap": "^2.5.20",
     "postcss": "8.4.12",
     "prettier": "2.6.2",
     "rollup": "^2.70.2",
