--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ NEXT_PUBLIC_SLACK_REPORTING_WEBHOOK_URL=""
 # Slack Webhook URL for contact submissions
 NEXT_PUBLIC_SLACK_CONTACT_WEBHOOK_URL=""
 
+# Access to MapBox APIs
+NEXT_PUBLIC_MAPBOX_API_KEY = 'pk.xxxxxxxxxxxxxxxxxx'
+
 # Generate a local build id namespace via https://www.uuidgenerator.net/
 BUILD_ID_NAMESPACE="388f729a-0eb7-4477-b054-9488bd2d8c4b"
 
