--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "build": "run-s build:*",
-    "build:service-worker": "rollup -c rollup.config.js",
+    "TODO_build:service-worker": "rollup -c rollup.config.js",
     "build:pages": "next build",
     "build:sitemap": "next-sitemap",
     "build:export": "next export",
