--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "dev": "next dev",
     "lint": "next lint",
     "build": "run-s build:*",
-    "TODO_build:service-worker": "rollup -c rollup.config.js",
     "build:pages": "next build",
     "build:sitemap": "next-sitemap",
     "build:export": "next export",
@@ -66,8 +65,6 @@
     "@types/react": "17.0.44",
     "@types/react-transition-group": "4.4.4",
     "@types/uuid": "8.3.4",
-    "@types/workbox-cacheable-response": "^4.3.1",
-    "@types/workbox-expiration": "^4.3.1",
     "apollo-codegen": "0.20.2",
     "autoprefixer": "10.4.4",
     "cssnano": "5.1.7",
@@ -76,20 +73,13 @@
     "eslint-config-next": "12.1.5",
     "husky": "7.0.4",
     "lint-staged": "12.4.0",
-    "next-sitemap": "^2.5.20",
+    "next-sitemap": "3.0.5",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.12",
     "prettier": "2.6.2",
-    "rollup": "^2.70.2",
-    "rollup-plugin-copy": "^3.4.0",
     "tailwindcss": "3.0.24",
     "typescript": "4.6.3",
-    "uuid": "8.3.2",
-    "workbox-cacheable-response": "^6.5.3",
-    "workbox-expiration": "^6.5.3",
-    "workbox-precaching": "^6.5.3",
-    "workbox-routing": "^6.5.3",
-    "workbox-strategies": "^6.5.3"
+    "uuid": "8.3.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
