--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "website-next",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,25 +18,29 @@
     "graphql:introspect": "node ./bin/introspect-graphql-schema.js"
   },
   "dependencies": {
-    "@apollo/client": "3.5.10",
-    "@headlessui/react": "1.5.0",
-    "@heroicons/react": "1.0.6",
+    "@apollo/client": "3.7.3",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "1.7.7",
+    "@heroicons/react": "2.0.13",
     "@slack/webhook": "6.1.0",
     "axios": "0.26.1",
-    "classnames": "2.3.1",
-    "date-fns": "2.28.0",
-    "dompurify": "2.3.6",
+    "classnames": "2.3.2",
+    "date-fns": "2.29.3",
+    "dompurify": "2.4.3",
     "focus-trap": "6.8.1",
-    "graphql": "16.3.0",
+    "graphql": "16.6.0",
     "js-cookie": "3.0.1",
     "jsdom": "19.0.0",
     "lazysizes": "5.3.2",
     "mapbox-gl": "2.8.2",
-    "next": "12.1.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-hook-form": "7.30.0",
-    "react-transition-group": "4.4.2",
+    "next": "13.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.41.5",
+    "react-transition-group": "4.4.5",
     "stacktrace-js": "2.0.2",
     "xss": "1.0.11"
   },
@@ -43,43 +48,39 @@
     "@commitlint/cli": "16.2.3",
     "@commitlint/config-conventional": "16.2.1",
     "@graphql-codegen/add": "3.1.1",
-    "@graphql-codegen/cli": "2.6.3",
-    "@graphql-codegen/introspection": "2.1.1",
-    "@graphql-codegen/schema-ast": "2.4.1",
-    "@graphql-codegen/typescript": "2.4.8",
-    "@graphql-codegen/typescript-operations": "2.3.5",
-    "@graphql-codegen/typescript-react-apollo": "3.2.11",
-    "@rollup/plugin-commonjs": "^21.1.0",
-    "@rollup/plugin-node-resolve": "^13.2.1",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@tailwindcss/aspect-ratio": "0.4.0",
-    "@tailwindcss/forms": "0.5.0",
-    "@tailwindcss/typography": "0.5.2",
-    "@types/dompurify": "2.3.3",
-    "@types/js-cookie": "3.0.1",
-    "@types/jsdom": "16.2.14",
-    "@types/mapbox-gl": "2.7.2",
-    "@types/node": "17.0.18",
-    "@types/ol": "^6.5.3",
-    "@types/react": "17.0.44",
-    "@types/react-transition-group": "4.4.4",
-    "@types/uuid": "8.3.4",
+    "@graphql-codegen/cli": "2.16.3",
+    "@graphql-codegen/introspection": "2.2.3",
+    "@graphql-codegen/schema-ast": "2.6.1",
+    "@graphql-codegen/typescript": "2.8.7",
+    "@graphql-codegen/typescript-operations": "2.5.12",
+    "@graphql-codegen/typescript-react-apollo": "3.3.7",
+    "@tailwindcss/aspect-ratio": "0.4.2",
+    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/typography": "0.5.8",
+    "@types/dompurify": "2.4.0",
+    "@types/js-cookie": "3.0.2",
+    "@types/jsdom": "20.0.1",
+    "@types/mapbox-gl": "2.7.10",
+    "@types/node": "18.11.18",
+    "@types/ol": "6.5.3",
+    "@types/react": "18.0.26",
+    "@types/react-transition-group": "4.4.5",
+    "@types/uuid": "9.0.0",
     "apollo-codegen": "0.20.2",
-    "autoprefixer": "10.4.4",
-    "cssnano": "5.1.7",
-    "dotenv": "16.0.0",
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.5",
-    "husky": "7.0.4",
-    "lint-staged": "12.4.0",
-    "next-sitemap": "3.0.5",
+    "autoprefixer": "10.4.13",
+    "cssnano": "5.1.14",
+    "dotenv": "16.0.3",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1",
+    "husky": "8.0.3",
+    "lint-staged": "13.1.0",
+    "next-sitemap": "3.1.44",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.12",
-    "prettier": "2.6.2",
+    "postcss": "8.4.21",
+    "prettier": "2.8.2",
     "tailwindcss": "3.0.24",
-    "typescript": "4.6.3",
-    "uuid": "8.3.2"
+    "typescript": "4.9.4",
+    "uuid": "9.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
