fix: many fixes regarding festival page, contact form icons and cleanup for golive

--- a/.env.example
+++ b/.env.example
@@ -13,11 +13,18 @@ NEXT_PUBLIC_MATOMO_URL="https://matomo.com"
 # Matomo Tag Manager container ID for the website
 NEXT_PUBLIC_MATOMO_CONTAINER_ID="12345678"
 
-# Slack Webhook URL for direct reporting
+# DEPRECATED - Slack Webhook URL for direct reporting
 NEXT_PUBLIC_SLACK_REPORTING_WEBHOOK_URL=""
 
-# Slack Webhook URL for contact submissions
+# DEPRECATED - Slack Webhook URL for contact submissions
 NEXT_PUBLIC_SLACK_CONTACT_WEBHOOK_URL=""
+
+# Discord Webhook URL for contact submissions
+NEXT_PUBLIC_DISCORD_CONTACT_WEBHOOK_URL=""
+
+# Discord Webhook URL for direct reporting
+NEXT_PUBLIC_DISCORD_REPORTING_WEBHOOK_URL=""
+
 
 # Access to MapBox APIs
 NEXT_PUBLIC_MAPBOX_API_KEY = 'pk.xxxxxxxxxxxxxxxxxx'
