--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,16 +1,8 @@
 name: CI
 
 on:
-  push:
-    branches: [main]
   pull_request:
-    branches: [main]
-
   workflow_dispatch:
-
-  repository_dispatch:
-    types:
-      - webhook
 
 jobs:
   build:
@@ -61,67 +53,10 @@ jobs:
           NEXT_PUBLIC_MATOMO_CONTAINER_ID: ${{ secrets.MATOMO_CONTAINER_ID }}
           NEXT_PUBLIC_SLACK_CONTACT_WEBHOOK_URL: ${{ secrets.SLACK_CONTACT_WEBHOOK_URL }}
           NEXT_PUBLIC_SLACK_REPORTING_WEBHOOK_URL: ${{ secrets.SLACK_REPORTING_WEBHOOK_URL }}
+          NEXT_PUBLIC_DISCORD_REPORTING_WEBHOOK_URL: ${{ secrets.DSICORD_REPORTING_WEBHOOK_URL }}
+          NEXT_PUBLIC_DISCORD_CONTACT_WEBHOOK_URL: ${{ secrets.DISCORD_CONTACT_WEBHOOK_URL }}
           NEXT_PUBLIC_MAPBOX_API_KEY: ${{ secrets.MAPBOX_API_KEY }}
           WORKBOX_APP_ID: ${{ secrets.WORKBOX_APP_ID }}
           WORKBOX_APP_VERSION: ${{ secrets.WORKBOX_APP_VERSION }}
           BUILD_ID_NAMESPACE: ${{ secrets.BUILD_ID_NAMESPACE }}
           NODE_ENV: ${{ secrets.NODE_ENV }}
-
-      - name: Deploy Website
-        uses: SamKirkland/FTP-Deploy-Action@4.3.0
-        with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./out/
-          server-dir: website/staging/
-          exclude: |
-            **/.DS_Store
-            **/.vscode
-            **/.git*
-            **/.git*/**
-            **/.github/**
-
-      - name: Generate Styleguide
-        run: npm run tailwind:export
-
-      - name: Deploy Styleguide
-        uses: SamKirkland/FTP-Deploy-Action@4.3.0
-        with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./styleguide/
-          server-dir: styleguide/corporate/
-          exclude: |
-            **/.DS_Store
-            **/.vscode
-            **/.git*
-            **/.git*/**
-            **/.github/**
-
-      - name: Report issue to Slack
-        if: failure() && github.ref == 'refs/heads/main'
-        uses: 8398a7/action-slack@v3
-        with:
-          author_name: Deployment Robot
-          status: ${{ job.status }}
-          fields: repo,message,commit,action,eventName,ref,workflow,author,pullRequest
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DEPLOY_WEBHOOK_URL }}
-
-  notify:
-    needs: [build]
-    if: github.ref == 'refs/heads/main'
-    name: Notify
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Report to Slack
-        uses: 8398a7/action-slack@v3
-        with:
-          author_name: Deployment Robot
-          status: ${{ job.status }}
-          fields: repo,message,commit,action,eventName,ref,workflow,author,pullRequest
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DEPLOY_WEBHOOK_URL }}
