--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -68,7 +68,7 @@ jobs:
           NODE_ENV: ${{ secrets.NODE_ENV }}
 
       - name: Deploy Website
-        uses: SamKirkland/FTP-Deploy-Action@4.3.4
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
@@ -86,7 +86,7 @@ jobs:
         run: npm run tailwind:export
 
       - name: Deploy Styleguide
-        uses: SamKirkland/FTP-Deploy-Action@4.3.4
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
